# person_following_robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: person_tracker_params.yaml  realsense_camera.yaml  test.yaml
launch/: follow_person.launch.py
log/: latest_list
person_following_robot/: pixel2depth.py  pointcloud2numpy.py  qr_code_detector.py  tracker.py
scripts/: aruco_detector.py  byte_tracker.py  person_tracker.py  person_tracker_sort.py  realsense_camera.py  send_command_vel.py  test_script.py  tf_fake_broadcaster.py  tf_static_transformer.py  webcam_publisher.py  yolo_infer.py
src/: minimal_cpp_pub.cpp  webcam_publisher.cpp
src/YOLOv6/: infer_ros.py  infer_ros_test.py  setup.py
src/YOLOv6/tools/: eval.py  infer.py  infer_ros.py  train.py
src/YOLOv6/tools/quantization/tensorrt/post_training/: onnx_to_tensorrt.py
src/YOLOv6/yolov6.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/YOLOv6/yolov6/core/: engine.py  evaler.py  inferer.py
src/YOLOv6/yolov6/data/: data_augment.py  data_load.py  datasets.py  vis_dataset.py
src/YOLOv6/yolov6/layers/: common.py
src/YOLOv6/yolov6/models/: loss.py  yolo.py
src/YOLOv6/yolov6/solver/: build.py
src/YOLOv6/yolov6/utils/: checkpoint.py  config.py  ema.py  envs.py  events.py  figure_iou.py  general.py  nms.py  torch_utils.py
